--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+Header{
+    background: rgb(233, 233, 233)
+}
+footer{
+    background: rgb(233, 233, 233)
+}
 nav{
     background: rgb(142, 209, 231);
 }
